Added high score function

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -36,6 +36,9 @@ header {
 .time, .highscores {
     color: var(--maindesign);
 }
+.time {
+  text-align: right;
+}
 
 label {
   color: hsl(0, 0%, 100%);
